--- a/api/write.yaml
+++ b/api/write.yaml
@@ -87,6 +87,7 @@ components:
         record:
           type: object
           description: The record to write
+          additionalProperties: true
           example:
             {
               "email": "david@withampersand.com",
