connection metadata changes

--- a/catalog/catalog.yaml
+++ b/catalog/catalog.yaml
@@ -87,6 +87,29 @@ components:
           type: string
           example: scopes
           x-go-type-skip-optional-pointer: true
+        otherFields:
+          type: array
+          description: Additional fields to extract and transform from the token response
+          items:
+            type: object
+            required:
+              - name
+              - displayName
+              - jqValueSelector
+            properties:
+              name:
+                type: string
+                description: The internal name of the field
+                x-go-type-skip-optional-pointer: true
+              displayName:
+                type: string
+                description: The human-readable name of the field
+                x-go-type-skip-optional-pointer: true
+              jqValueSelector:
+                type: string
+                description: jq expression that extracts and transforms the value from the token response
+                example: ".instance_url | capture(\"https://([^.]+)\\.docusign\\.net\") | .[0]"
+                x-go-type-skip-optional-pointer: true
 
     Media:
       title: Media
@@ -368,6 +391,8 @@ components:
           $ref: '#/components/schemas/SubscribeOpts'
         modules:
           $ref: '#/components/schemas/Modules'
+        metadata:
+          $ref: '#/components/schemas/ProviderMetadata'
 
     CatalogWrapper:
       title: Catalog Wrapper
@@ -423,3 +448,41 @@ components:
           type: boolean
         passThrough:
           type: boolean
+
+    ProviderMetadata:
+      title: Provider Metadata
+      type: object
+      description: Provider metadata that needs to be given by the user or fetched by the connector post authentication for the connector to work.
+      properties:
+        input:
+          type: array
+          description: Metadata provided as manual input
+          items:
+            $ref: '#/components/schemas/MetadataItem'
+          x-go-type-skip-optional-pointer: true
+        postAuthentication:
+          type: array
+          description: Metadata fetched by the connector post authentication
+          items:
+            $ref: '#/components/schemas/MetadataItem'
+          x-go-type-skip-optional-pointer: true
+
+    MetadataItem:
+      title: Metadata Item
+      type: object
+      required:
+        - name
+      properties:
+        name:
+          type: string
+          description: The internal identifier for the metadata field
+          x-go-type-skip-optional-pointer: true
+        displayName:
+          type: string
+          description: The human-readable name for the field
+          x-go-type-skip-optional-pointer: true
+        docsURL:
+          type: string
+          description: URL with more information about how to locate this value
+          example: https://example.com/how-to-find-subdomain
+          x-go-type-skip-optional-pointer: true
