--- a/catalog/catalog.yaml
+++ b/catalog/catalog.yaml
@@ -88,28 +88,7 @@ components:
           example: scopes
           x-go-type-skip-optional-pointer: true
         otherFields:
-          type: array
-          description: Additional fields to extract and transform from the token response
-          items:
-            type: object
-            required:
-              - name
-              - displayName
-              - jqValueSelector
-            properties:
-              name:
-                type: string
-                description: The internal name of the field
-                x-go-type-skip-optional-pointer: true
-              displayName:
-                type: string
-                description: The human-readable name of the field
-                x-go-type-skip-optional-pointer: true
-              jqValueSelector:
-                type: string
-                description: jq expression that extracts and transforms the value from the token response
-                example: ".instance_url | capture(\"https://([^.]+)\\.docusign\\.net\") | .[0]"
-                x-go-type-skip-optional-pointer: true
+          $ref: '#/components/schemas/TokenMetadataFieldsOtherFields'
 
     Media:
       title: Media
@@ -118,6 +97,31 @@ components:
           $ref: '#/components/schemas/MediaTypeRegular'
         darkMode:
           $ref: '#/components/schemas/MediaTypeDarkMode'
+
+    TokenMetadataFieldsOtherFields:
+      type: array
+      title: Token Metadata Fields - Other fields
+      description: Additional fields to extract and transform from the token response
+      items:
+        type: object
+        required:
+          - name
+          - displayName
+          - jqValueSelector
+        properties:
+          name:
+            type: string
+            description: The internal name of the field
+            x-go-type-skip-optional-pointer: true
+          displayName:
+            type: string
+            description: The human-readable name of the field
+            x-go-type-skip-optional-pointer: true
+          jqValueSelector:
+            type: string
+            description: jq expression that extracts and transforms the value from the token response
+            example: ".instance_url | capture(\"https://([^.]+)\\.docusign\\.net\") | .[0]"
+            x-go-type-skip-optional-pointer: true
 
     MediaTypeDarkMode:
       title: Media Type Dark Mode
