--- a/catalog/catalog.yaml
+++ b/catalog/catalog.yaml
@@ -87,6 +87,8 @@ components:
           type: string
           example: scopes
           x-go-type-skip-optional-pointer: true
+        otherFields:
+          $ref: '#/components/schemas/TokenMetadataFieldsOtherFields'
 
     Media:
       title: Media
@@ -95,6 +97,31 @@ components:
           $ref: '#/components/schemas/MediaTypeRegular'
         darkMode:
           $ref: '#/components/schemas/MediaTypeDarkMode'
+
+    TokenMetadataFieldsOtherFields:
+      type: array
+      title: Token Metadata Fields - Other fields
+      description: Additional fields to extract and transform from the token response
+      items:
+        type: object
+        required:
+          - name
+          - displayName
+          - jqValueSelector
+        properties:
+          name:
+            type: string
+            description: The internal name of the field
+            x-go-type-skip-optional-pointer: true
+          displayName:
+            type: string
+            description: The human-readable name of the field
+            x-go-type-skip-optional-pointer: true
+          jqValueSelector:
+            type: string
+            description: jq expression that extracts and transforms the value from the token response
+            example: ".instance_url | capture(\"https://([^.]+)\\.docusign\\.net\") | .[0]"
+            x-go-type-skip-optional-pointer: true
 
     MediaTypeDarkMode:
       title: Media Type Dark Mode
@@ -368,6 +395,8 @@ components:
           $ref: '#/components/schemas/SubscribeOpts'
         modules:
           $ref: '#/components/schemas/Modules'
+        metadata:
+          $ref: '#/components/schemas/ProviderMetadata'
 
     CatalogWrapper:
       title: Catalog Wrapper
@@ -423,3 +452,52 @@ components:
           type: boolean
         passThrough:
           type: boolean
+
+    ProviderMetadata:
+      title: Provider Metadata
+      type: object
+      description: Provider metadata that needs to be given by the user or fetched by the connector post authentication for the connector to work.
+      properties:
+        input:
+          type: array
+          description: Metadata provided as manual input
+          items:
+            $ref: '#/components/schemas/MetadataItemInput'
+          x-go-type-skip-optional-pointer: true
+        postAuthentication:
+          type: array
+          description: Metadata fetched by the connector post authentication
+          items:
+            $ref: '#/components/schemas/MetadataItemPostAuthentication'
+          x-go-type-skip-optional-pointer: true
+
+    MetadataItemInput:
+      title: Metadata Item (as input)
+      type: object
+      required:
+        - name
+      properties:
+        name:
+          type: string
+          description: The internal identifier for the metadata field
+          x-go-type-skip-optional-pointer: true
+        displayName:
+          type: string
+          description: The human-readable name for the field
+          x-go-type-skip-optional-pointer: true
+        docsURL:
+          type: string
+          description: URL with more information about how to locate this value
+          example: https://example.com/how-to-find-subdomain
+          x-go-type-skip-optional-pointer: true
+
+    MetadataItemPostAuthentication:
+      title: Metadata Item (fetched post authentication)
+      type: object
+      required:
+        - name
+      properties:
+        name:
+          type: string
+          description: The internal identifier for the metadata field
+          x-go-type-skip-optional-pointer: true
