--- a/catalog/catalog.yaml
+++ b/catalog/catalog.yaml
@@ -309,6 +309,30 @@ components:
           example: https://docs.example.com/api-key
           x-go-type-skip-optional-pointer: true
 
+    CredentialsHealthCheck:
+      title: Credentials Health Check
+      type: object
+      description: An endpoint to check the health of a provider's credentials. It's used to see if the credentials are valid and if the provider is reachable.
+      required:
+        - endpoint
+      properties:
+        endpoint:
+          type: string
+          description: a no-op endpoint to check the health of the credentials. The endpoint MUST not mutate any state. If the provider doesn't have such an endpoint, then don't provide credentialsHealthCheck.
+          example: https://api.example.com/health-check
+        method:
+          type: string
+          description: The HTTP method to use for the health check. If not set, defaults to GET.
+          example: GET
+          x-go-type-skip-optional-pointer: true
+        successStatusCodes:
+          type: array
+          items:
+            type: integer
+          description: The HTTP status codes that indicate a successful health check. If not set, defaults to 200 and 204.
+          example: [200, 204]
+          x-go-type-skip-optional-pointer: true
+
     Modules:
       title: Modules that this provider supports
       type: object
@@ -377,6 +401,8 @@ components:
           $ref: '#/components/schemas/Support'
         providerOpts:
           $ref: '#/components/schemas/ProviderOpts'
+        credentialsHealthCheck:
+          $ref: '#/components/schemas/CredentialsHealthCheck'
         displayName:
           type: string
           example: Zendesk Chat
