--- a/catalog/catalog.yaml
+++ b/catalog/catalog.yaml
@@ -309,16 +309,16 @@ components:
           example: https://docs.example.com/api-key
           x-go-type-skip-optional-pointer: true
 
-    CredentialsHealthCheck:
-      title: Credentials Health Check
+    AuthHealthCheck:
+      title: Auth Health Check
       type: object
-      description: An endpoint to check the health of a provider's credentials. It's used to see if the credentials are valid and if the provider is reachable.
+      description: A URL to check the health of a provider's credentials. It's used to see if the credentials are valid and if the provider is reachable.
       required:
-        - endpoint
+        - url
       properties:
-        endpoint:
+        url:
           type: string
-          description: a no-op endpoint to check the health of the credentials. The endpoint MUST not mutate any state. If the provider doesn't have such an endpoint, then don't provide credentialsHealthCheck.
+          description: a no-op URL to check the health of the credentials. The URL MUST not mutate any state. If the provider doesn't have such an endpoint, then don't provide credentialsHealthCheck.
           example: https://api.example.com/health-check
         method:
           type: string
@@ -401,8 +401,8 @@ components:
           $ref: '#/components/schemas/Support'
         providerOpts:
           $ref: '#/components/schemas/ProviderOpts'
-        credentialsHealthCheck:
-          $ref: '#/components/schemas/CredentialsHealthCheck'
+        authHealthCheck:
+          $ref: '#/components/schemas/AuthHealthCheck'
         displayName:
           type: string
           example: Zendesk Chat
