--- a/catalog/catalog.yaml
+++ b/catalog/catalog.yaml
@@ -107,7 +107,7 @@ components:
         required:
           - name
           - displayName
-          - jqValueSelector
+          - path
         properties:
           name:
             type: string
@@ -117,10 +117,15 @@ components:
             type: string
             description: The human-readable name of the field
             x-go-type-skip-optional-pointer: true
-          jqValueSelector:
+          path:
             type: string
-            description: jq expression that extracts and transforms the value from the token response
-            example: ".instance_url | capture(\"https://([^.]+)\\.docusign\\.net\") | .[0]"
+            description: The path to the field in the token response (accepts dot notation for nested fields)
+            example: "owner.siteId"
+            x-go-type-skip-optional-pointer: true
+          capture:
+            type: string
+            description: A regex expression to capture the value that we need from the path
+            example: https:\/\/([^.]+)\.docusign\.net
             x-go-type-skip-optional-pointer: true
 
     MediaTypeDarkMode:
@@ -516,7 +521,6 @@ components:
           description: URL with more information about how to locate this value
           example: https://example.com/how-to-find-subdomain
           x-go-type-skip-optional-pointer: true
-
     MetadataItemPostAuthentication:
       title: Metadata Item (fetched post authentication)
       type: object
