chore: update to correct path generated/manifest.json

--- a/.github/workflows/update-json-schema.yml
+++ b/.github/workflows/update-json-schema.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - "manifest/manifest.json"
+      - "manifest/generated/manifest.json"
   workflow_dispatch:
 
 jobs:
