--- a/config/config.yaml
+++ b/config/config.yaml
@@ -139,6 +139,77 @@ components:
           x-go-type-skip-optional-pointer: true
           additionalProperties:
             $ref: '#/components/schemas/FieldSetting'
+   
+    BaseSubscribeConfig:
+      title: Base Subscribe Config
+      type: object
+      properties:
+        objects:
+          type: object
+          additionalProperties:
+            $ref: '#/components/schemas/BaseSubscribeConfigObject'
+    
+    BaseSubscribeConfigObject:
+      title: Base Subscribe Config Object
+      type: object
+      required:
+        - objectName
+        - destination
+        - inheritFieldsAndMappings
+      properties:
+        inheritFieldsAndMappings:
+          type: boolean
+          description: Whether to inherit fields and mappings from the read config.
+          example: true
+        objectName:
+          description: The name of the object to subscribe to.
+          example: account
+          type: string
+        destination:
+          description: The name of the destination that the result should be sent to.
+          example: accountWebhook
+          type: string
+        createEvent:
+          type: object
+          required:
+            - enabled
+          properties:
+            enabled:
+              type: string
+              description: Whether to create a create event.
+              example: always
+              enum: [ always ]
+        updateEvent:
+          type: object
+          required:
+            - enabled
+          properties:
+            enabled:
+              type: string
+              description: Whether to create an update event.
+              example: always
+              enum: [ always ]
+            watchFieldsAuto:
+              type: string
+              description: Whether to watch fields all fields automatically.
+              example: all
+              enum: [ all ]
+            requiredWatchFields:
+              type: array
+              items:
+                type: string
+              description: The fields that should be watched.
+              example: [ name, description ]
+        deleteEvent:
+          type: object
+          required:
+            - enabled
+          properties:
+            enabled:
+              type: string
+              description: Whether to create a delete event.
+              example: always
+              enum: [ always ]
 
     ConfigContent:
       title: Config Content
@@ -152,6 +223,8 @@ components:
               $ref: '#/components/schemas/ReadConfig'
             write:
               $ref: '#/components/schemas/WriteConfig'
+            subscribe:
+              $ref: '#/components/schemas/SubscribeConfig'
 
     ReadConfig:
       title: Read Config
@@ -193,6 +266,26 @@ components:
         - type: object
           required:
             - objectName
+    
+    SubscribeConfig:
+      title: Subscribe Config
+      allOf:
+        - $ref: '#/components/schemas/BaseSubscribeConfig'
+        - type: object
+          properties:
+            objects:
+              additionalProperties:
+                $ref: '#/components/schemas/SubscribeConfigObject'
+    
+    SubscribeConfigObject:
+      title: Subscribe Config Object
+      allOf:
+        - $ref: '#/components/schemas/BaseSubscribeConfigObject'
+        - type: object
+          required:
+            - objectName
+            - destination
+            - inheritFieldsAndMappings
 
     UpdateInstallationConfigContent:
       title: Update Installation Config Content
@@ -239,7 +332,7 @@ components:
             validate: required_without=FullHistory,omitempty,min=0
         fullHistory:
           type: boolean
-          description: If true, backfill all history. Required if days is not set.
+          Description: If true, backfill all history. Required if days is not set.
           example: false
           x-oapi-codegen-extra-tags:
             validate: required_without=Days
@@ -261,7 +354,7 @@ components:
           enum: [ always, never ]
           default: always
           x-go-type-skip-optional-pointer: true
-          description: Whether the default value should be applied when updating a record.
+          Description: Whether the default value should be applied when updating a record.
 
     FieldSettingDefault:
       title: Default value for a field
@@ -270,7 +363,7 @@ components:
       properties:
         stringValue:
           type: string
-          description: The default string value to apply to a field
+          Description: The default string value to apply to a field
         integerValue:
           type: integer
           description: The default integer value to apply to a field
