--- a/config/config.yaml
+++ b/config/config.yaml
@@ -176,8 +176,7 @@ components:
           properties:
             enabled:
               type: string
-              description: Whether to create a create event.
-              example: always
+              description: Conditions to enable create events.
               enum: [ always ]
         updateEvent:
           type: object
@@ -186,7 +185,7 @@ components:
           properties:
             enabled:
               type: string
-              description: Whether to create an update event.
+              description: Conditions to enable update events.
               example: always
               enum: [ always ]
             watchFieldsAuto:
@@ -207,7 +206,7 @@ components:
           properties:
             enabled:
               type: string
-              description: Whether to create a delete event.
+              description: Conditions to enable delete events.
               example: always
               enum: [ always ]
 
